sample/error/eval_nd-var_module.bfr
let c = 0
module B = import "../misc/import_b.bfr"

let _ = B:c

codegen []